--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <span>Dicas:</span>
         <p>&rarrb; Use qualquer tecla do teclado para Pular </p>
         <p>&rarrb; Colidir com o Bolsolula custará 20% da sua vida máxima</p>
-        <p>&rarrb; Cogumelos restauram 20% da sua vida máxima</p>
+        <p>&rarrb; Cogumelos restauram 20% da sua vida máxima e +1000 pontos</p>
         <p>&rarrb; Se sua vida estiver em 100% cogumelos concedem invencibilidade por 10 segundos.</p>
     </div>
         <div id="gameboard">
