--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             
             </div>
             <div class="invulneravel sumir">
-                <div class="text">INVENCÍVEL</div>
+                <span class="text">INVENCÍVEL</span>
                 <div class="bar"></div>     
             </div>
             
