--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
     <title>Mario vs BolsoLula</title>
 
@@ -20,13 +20,6 @@
 
 <body class="tudo" onload="iniciar()">
 
-    <div class="dicas">
-        <span>Dicas:</span>
-        <p>&rarrb; Use qualquer tecla do teclado para Pular </p>
-        <p>&rarrb; Colidir com o Bolsolula custará 20% da sua vida máxima</p>
-        <p>&rarrb; Cogumelos restauram 20% da sua vida máxima e +1000 pontos</p>
-        <p>&rarrb; Se sua vida estiver em 100% cogumelos concedem invencibilidade por 10 segundos.</p>
-    </div>
     <div id="gameboard">
 
         <div class="vida">
